# python-workspace

./: .bandit  .bandit.yaml  .gitignore  .pylintrc  .pythonrc  README.md  pyproject.toml  requirements-json.txt  requirements-rich.txt  requirements-toml.txt  requirements-yaml.txt
src/learn_asgi/: __init__.py  __main__.py  client.py  main.py
src/learn_asyncio/: __init__.py  __main__.py  main.py
src/learn_enum/: __init__.py  __main__.py  color.py  intcolor.py  main.py  namedcolor.py  number.py  weekday.py
src/learn_flask/: __init__.py  __main__.py  main.py
src/learn_rich/: __init__.py  __main__.py  main.py
src/learn_toml/: __init__.py  __main__.py  config.toml  main.py
src/learn_yaml/: __main__.py  config.yaml  main.py
src/test/: enum_test.py
test/: asgi_test.py  asyncio_test.py  flask_test.py  testcontainers_with_mongodb_test.py  testcontainers_with_postgresql_test.py  toml_test.py
test/learn_yaml/: yaml_test.py
tests/learn_rich/: rich_test.py
